# onboarding-laura-montes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
poetry-project/: .pre-commit-config.yaml  README.md  pyproject.toml
poetry-project/src/poetry_project/: console.py
src/onboarding_laura_montes/: __init__.py  console.py
